automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,8 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination()\n",
+    "def favorite_destination():\n",
+    "    return madagas\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
