--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    trav\n",
+    "    travel_destinations.a\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
