--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,9 +205,7 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def favorite_destination():\n",
-    "    \n",
-    "    return 'madagascar'\n",
+    "favorite_destination()\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
