--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
-    "        country=country.title"
+    "        country=country.title()\n",
+    "        "
    ]
   },
   {
