--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
     "        country=country.title()\n",
-    "        "
+    "    return "
    ]
   },
   {
