--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
     "def capitalize_countries():\n",
     "    for country in travel_destinations:\n",
     "        country=country.title()\n",
-    "    return "
+    "    return travel_destinations"
    ]
   },
   {
