--- a/index.ipynb
+++ b/index.ipynb
@@ -224,6 +224,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    travel\n",
+    "    -\n",
     "    for country in travel_destinations:\n",
     "        country=country.title()\n",
     "    return travel_destinations"
