--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    travel_destinations\n",
+    "    travel_destination = []\n",
     "    for country in travel_destinations:\n",
     "        country=country.title()\n",
     "    return travel_destinations"
