automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "def capitalize_countries():\n",
     "    travel_destination = []\n",
     "    for country in travel_destinations:\n",
-    "        country=country.title()\n",
+    "        travel_destinationcountry.title()\n",
     "    return travel_destinations"
    ]
   },
