automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,8 +226,8 @@
     "def capitalize_countries():\n",
     "    travel_destination = []\n",
     "    for country in travel_destinations:\n",
-    "        travel_destination.appendcountry.title()\n",
-    "    return travel_destinations"
+    "        travel_destination.append(country.title())\n",
+    "    return travel_destination"
    ]
   },
   {
